# SUFE

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  sufe.yaml.example
src/: canvas_client.py  config.py  fs_utils.py  sso.py
sufe/: __init__.py  __main__.py  cli.py  config.py  storage.py  user_config.py
sufe/auth/: __init__.py  credentials.py  session.py  sso.py
sufe/canvas/: api.py  run.py
sufe/career/: api.py  export.py  run.py  state.py
sufe/evaluation/: __init__.py  api.py  config.py  run.py
sufe/grade/: analyze.py  api.py  run.py
